--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,36 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    
+    <!-- header section start -->
+    <header class="container">
+            <section id="person-text" class="header-half">
+                <h1>The Greatest show on the earth</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <a href="#" class="link-button">Watch Live 	&gt;</a>
+            </section>
+            <section id="person-image" class="header-half">
+                <img src="./assets/Banner Image.png" alt="player-image">
+            </section>
+    </header>
+    <!-- header section end -->
+    <!-- players card section start -->
+    <main class="container">
+        <section class="players-section">
+            <div class="toggle-buttons">
+                <a href="#" class="toggle-button">Upcoming Match</a>
+                <a href="#" class="toggle-button">All Group</a>
+                <a href="#" class="toggle-button">Blog</a>
+            </div>
+            <div class="player-cards">
+                <div class="card">
+
+                </div>
+            </div>
+        </section>
+    </main>
+        <!-- players card section start -->
 </body>
+
 </html>
