players blogs created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup Assignment-2</title>
+    <!-- font awesome kit -->
+    <script src="https://kit.fontawesome.com/21533249a6.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -13,32 +15,183 @@
 <body>
     <!-- header section start -->
     <header class="container">
-            <section id="person-text" class="header-half">
-                <h1>The Greatest show on the earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <a href="#" class="link-button">Watch Live 	&gt;</a>
-            </section>
-            <section id="person-image" class="header-half">
-                <img src="./assets/Banner Image.png" alt="player-image">
-            </section>
+        <section id="person-text" class="header-half">
+            <h1>The Greatest show on the earth</h1>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                Latin literature from 45 BC, making it over 2000 years old.</p>
+            <a href="#" class="link-button">Watch Live &gt;</a>
+        </section>
+        <section id="person-image" class="header-half">
+            <img src="./assets/Banner Image.png" alt="player-image">
+        </section>
     </header>
     <!-- header section end -->
     <!-- players card section start -->
     <main class="container">
-        <section class="players-section">
+        <section class="players-blogs">
             <div class="toggle-buttons">
                 <a href="#" class="toggle-button">Upcoming Match</a>
                 <a href="#" class="toggle-button">All Group</a>
-                <a href="#" class="toggle-button">Blog</a>
+                <a id="colored-button" href="#" class="toggle-button">Blog</a>
             </div>
             <div class="player-cards">
-                <div class="card">
-
-                </div>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div class="card-image">
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <button class="card-button">Transfer</button>
+                        <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                        <div class="card-info">
+                            <span>
+                                <i class="fa-regular fa-clock"></i> 10h
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-message"></i> 23
+                            </span>
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
-        <!-- players card section start -->
+    <!-- players card section start -->
 </body>
 
 </html>
