footer created and website-1 has been created

--- a/index.html
+++ b/index.html
@@ -192,6 +192,29 @@
         </section>
     </main>
     <!-- players card section start -->
+    <!-- footer start -->
+    <footer>
+        <div class="footer-heading">
+            <h2>Goal</h2>
+        </div>
+        <hr>
+        <nav>
+            <ul class="navigation">
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Privacy Settings</a></li>
+                <li><a href="#">Goal App</a></li>
+                <li><a href="#">Goal Live</a></li>
+            </ul>
+            <ul class="navigation">
+                <li><a class="icon" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a class="icon" href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a class="icon" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            </ul>
+        </nav>
+    </footer>
+    <!-- footer end -->
 </body>
 
 </html>
