--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="container">
         <section class="players-blogs">
             <div class="toggle-buttons">
-                <a href="#" class="toggle-button">Upcoming Match</a>
+                <a href="match.html" class="toggle-button">Upcoming Match</a>
                 <a href="#" class="toggle-button">All Group</a>
                 <a id="colored-button" href="#" class="toggle-button">Blog</a>
             </div>
@@ -208,9 +208,9 @@
                 <li><a href="#">Goal Live</a></li>
             </ul>
             <ul class="navigation">
-                <li><a class="icon" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a class="icon" href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a class="icon" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a class="icon" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a class="icon" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a class="icon" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>
         </nav>
     </footer>
