markup modified and top banner responsive added

--- a/index.html
+++ b/index.html
@@ -14,15 +14,27 @@
 
 <body>
     <!-- header section start -->
-    <header class="container">
-        <section id="person-text" class="header-half">
-            <h1>The Greatest show on the earth</h1>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 years old.</p>
-            <a href="#" class="link-button">Watch Live &gt;</a>
-        </section>
-        <section id="person-image" class="header-half">
-            <img src="./assets/Banner Image.png" alt="player-image">
+    <header>
+        <section class="container">
+            <div class="top-banner">
+                <div class="banner-text half-width">
+                    <div class="banner-heading">
+                        <h1>The Greatest show on the earth</h1>
+                    </div>
+                    <div class="banner-description">
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text. It has roots in a piece of classical Latin literature from 45 BC, making it
+                            over
+                            2000 years old.</p>
+                    </div>
+                    <div class="banner-btn">
+                        <a href="#" class="link-btn">Watch Live</a>
+                    </div>
+                </div>
+                <div class="banner-image half-width">
+                    <img src="./assets/Banner Image.png" alt="marcelo">
+                </div>
+            </div>
         </section>
     </header>
     <!-- header section end -->
