footer responsive done

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -72,12 +72,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -89,12 +89,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -106,12 +106,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -123,12 +123,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -140,12 +140,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -157,12 +157,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -174,12 +174,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -191,12 +191,12 @@
                         <button class="card-button">Transfer</button>
                         <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
                         <div class="card-info">
-                            <span>
+                            <div>
                                 <i class="fa-regular fa-clock"></i> 10h
-                            </span>
-                            <span>
+                            </div>
+                            <div>
                                 <i class="fa-regular fa-message"></i> 23
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -219,7 +219,7 @@
                 <li><a href="#">Goal App</a></li>
                 <li><a href="#">Goal Live</a></li>
             </ul>
-            <ul class="navigation">
+            <ul id="social-icon" class="navigation">
                 <li><a class="icon" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a class="icon" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a class="icon" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></li>
