tablet device responsive and view all button added

--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
                     </div>
                 </article>
             </div>
+            <div id="view-btn">
+                <a href="#">View All</a>
+            </div>
         </section>
     </main>
     <!-- players card section start -->
@@ -211,7 +214,7 @@
         </div>
         <hr>
         <nav>
-            <ul class="navigation">
+            <ul id="nav-items" class="navigation">
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Terms of Service</a></li>
                 <li><a href="#">Privacy Policy</a></li>
