--- a/match.html
+++ b/match.html
@@ -148,7 +148,7 @@
         </div>
         <hr>
         <nav>
-            <ul class="navigation">
+            <ul id="nav-items" class="navigation">
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Terms of Service</a></li>
                 <li><a href="#">Privacy Policy</a></li>
