transition and button icon added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             2000 years old.</p>
                     </div>
                     <div class="banner-btn">
-                        <a href="#" class="link-btn">Watch Live</a>
+                        <a href="#" class="link-btn">Watch Live &#8594</a>
                     </div>
                 </div>
                 <div class="banner-image half-width">
